--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -4,15 +4,15 @@
 
 <h2>Edit a user</h2>
 
-<form>
+<form id="newpostform">
     <label for="">First name</label> <br />
-    <input type="text" name="first" value="{{user.first_name}}"> <br>
+    <input type="text" name="first" value="{{user.first_name}}" id="first"> <br>
     <label for="">Last name</label> <br>
-    <input type="text" name="last" value="{{user.last_name}}"> <br>
+    <input type="text" name="last" value="{{user.last_name}}" id="last"> <br>
     <label for="">Image URL</label> <br>
-    <input type="text" name="url" value="{{user.image_url}}"> <br>
-    <button id="cancel" type="submit" formmethod="GET" formaction="/users/{{id}}">Cancel</button>
-    <button id="save" type="submit" formmethod="POST" formaction="/users/{{id}}/edit">Save</button>
+    <input type="text" name="url" value="{{user.image_url}}" id="url"> <br>
+    <button id="addpost" type="submit" formmethod="POST" formaction="/users/{{id}}/edit">Save</button>
+    <button id="canceledit" type="submit" formmethod="GET" formaction="/users/{{id}}">Cancel</button>
 </form>
 
 {% endblock %}
