--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,10 @@
     <title>Blog</title>
 </head>
 <body>
-    <h1>Blogly</h1>
+    <h1><a href="/">Blogly</a></h1>
+    <h4><a href="/users">All users |</a></h4>
+    <h4 id="alltags"><a href="/tags">All tags</a></h4>
+
     <hr>
 
     {% block content %} {% endblock %}
