--- a/templates/post_details.html
+++ b/templates/post_details.html
@@ -4,7 +4,12 @@
 
 <h2>{{post.title}}</h2>
 <p>{{post.content}}</p>
-<p><i>By {{post.user.get_full_name()}}</i></p>
+<p><i>By {{post.user.get_full_name()}} on {{post.created_at.strftime("%a %b %d, %Y, %I:%M %p")}}</i></p>
+<p><b>Tags: </b>
+    {% for tag in post.tags%}
+        <button class="tags"><i>{{tag.name}}</i></button>
+    {% endfor %}
+</p>
 
 <form action="">
     <button formaction="/users/{{post.user.id}}" id="cancelpost">Cancel</button>
